fixed flickering

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -27,6 +27,7 @@
   align-items: center;
   padding: 0.9rem 0;
   gap: 0.9rem;
+  min-height: 52px;
 }
 
 .contact-info {
